# blockfs

./: .Block.hpp.swp  .gitignore  Block.cpp  Block.h  Block.hpp  CMakeLists.txt  Cache.cpp  Cache.h  Cache.hpp  Entry.cpp  Entry.h  Entry.hpp  File.cpp  File.h  Manager.cpp  Manager.h  Manager.hpp  README.md  Sftp.cpp  Sftp.h  Sftp.hpp  blockfs.cpp  blockfs.h  blockfs.hpp  client.py  forecache.cpp  forecache.hpp  main.cpp  reset.cpp  sandbox.cpp  test.cpp  testentry.cpp  testsftp.cpp  usertaste_client.cc
include/: Block.hpp  Blockfs.hpp  Entry.hpp  Forecache.hpp  Manager.hpp  logger.hpp
rpc/: .client.py.swp  CMakeLists.txt  client.py  compile_commands.json  server.py  tfidf.py  usertaste_client.cpp  usertaste_pb2.py  usertaste_pb2_grpc.py
rpc/include/: Base.hpp  Cache.hpp  Sftp.hpp  logger.hpp
rpc/protos/: usertaste.proto
rpc/src/: Cache.cpp  Sftp.cpp  usertaste_client.cpp
src/: Block.cpp  Blockfs.cpp  Cache.cpp  Entry.cpp  Forecache.cpp  Manager.cpp  Reset.cpp  Sftp.cpp  Test.cpp
test/: Makefile  nativerandom.txt  nativesimilar.txt  random.txt  similar.txt
test/src/: performanceio.cpp  testblock.cpp
